--- a/www/templates/kqhz.html
+++ b/www/templates/kqhz.html
@@ -34,7 +34,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<div ng-show="loadingStatus!=''" class="mg-tp-1 anji-theme" ng-bind="loadingStatus">加载中</div>
+			<div ng-show="loadingStatus!=''" class="mg-tp-1 anji-theme loadingDiv" ng-bind="loadingStatus">加载中</div>
 		</div>
     </ion-content>
     <ion-footer-bar>
