--- a/www/templates/lgjh.html
+++ b/www/templates/lgjh.html
@@ -47,7 +47,7 @@
 			</thead>
 			<tbody ng-show="loadingStatus!=''" >
 				<tr><td colspan="17">
-					<span ng-bind="loadingStatus">加载中</span>
+					<span ng-bind="loadingStatus" style="display: inline;">加载中</span>
 				</td></tr>
 			</tbody>
 			<tbody ng-repeat="r in rows">
