--- a/www/templates/kpi-group.html
+++ b/www/templates/kpi-group.html
@@ -24,8 +24,16 @@
     <ion-content scroll="false">
 	    <div class="kpiGroup tc" style="position: absolute; width: 100%; height: 100%;">
 	    	<div class="center">
+
 	    		<img src="img/3.svg">
-	        	<a ng-click="goDetail(kpi.type, kpi.PageType)" ng-repeat="kpi in kpis" class="kpi {{kpi.type}}" ng-bind="kpi.name"></a>
+	        	<a ng-click="goDetail(kpi.type, kpi.PageType)" ng-repeat="kpi in kpis" class="kpi {{kpi.type}}">
+	        		<div style="position: relative;">
+		        		<span ng-bind="kpi.name"></span>
+		        		<div style="    width: 100%; position: absolute; height: 1em; text-align: center; top: 0; left: 0;" ng-if="kpi.hatColor && kpi.hatColor!=''" class="hat">
+				        	<img ng-src="img/{{kpi.hatColor}}.svg" style="    position: absolute; top: -1em; left: 50%; height: 100%; margin-left: -0.5em;"/>
+				        </div>
+	        		</div>
+	        	</a>
 	    	</div>
 	    </div>
 		<div class="quickNav" style="bottom: 0;">
