--- a/www/templates/gwrx.html
+++ b/www/templates/gwrx.html
@@ -19,7 +19,7 @@
 		</div>
 	  	<div></div>
 	</ion-header-bar>
-    <ion-content overflow-scroll>
+    <ion-content>
     	<div style="height: 100%; padding-bottom: 6em; position: relative;">
 		    <div class="kqhz gwrx content-wrapper">
 		    <span class="anji-theme" style="font-size:0.9em" ng-show="loadingStatus!=''" ng-bind="loadingStatus">加载中</span>
