--- a/www/templates/flow-view-wall.html
+++ b/www/templates/flow-view-wall.html
@@ -36,9 +36,10 @@
 					<td ng-bind="$index+1"></td>
 					<td ng-bind="r.whse_code"></td>
 					<td ng-bind="r.dataweek"></td>
-					<td ng-bind="r.datadate"></td>
+					<td ng-bind="r.datadate"></td> <!-- 停线起止时间 -->
+					<td ng-bind="r.downtime"></td>
 					<td ng-bind="r.downtime_range"></td>
-					<td ng-bind=""></td> <!-- 停线起止时间 -->
+					<td ng-bind="r.part_name"></td>
 					<td ng-bind="r.part_number"></td>
 					<td ng-bind="r.comment"></td>
 					<td ng-bind="r.in_charge"></td>
