--- a/www/templates/cost-view-wall.html
+++ b/www/templates/cost-view-wall.html
@@ -77,7 +77,7 @@
 									<td ng-bind="3*$index+1"></td>
 									<td ng-bind="r.items[3*$index+1].CODE"></td>
 									<td><span ng-if="r.items[3*$index+1].STATE" ng-class="{'cst-stop': r.items[3*$index+1].STATE=='2', 'cst-ready': r.items[3*$index+1].STATE=='3', 'cst-normal': r.items[3*$index+1].STATE=='1'}" class="circle"></span></td>
-									
+
 									<td ng-bind="3*$index+2"></td>
 									<td ng-bind="r.items[3*$index+2].CODE"></td>
 									<td><span ng-if="r.items[3*$index+2].STATE" ng-class="{'cst-stop': r.items[3*$index+2].STATE=='2', 'cst-ready': r.items[3*$index+2].STATE=='3', 'cst-normal': r.items[3*$index+2].STATE=='1'}" class="circle"></span></td>
@@ -85,30 +85,16 @@
 								</tr>								
 							</tbody>
 
-							<!-- <tbody >
-								<tr ng-repeat="r in rows">
-									<td ng-bind="3*$index+1"></td>
-									<td ng-bind="r[0].name" ng-class="{'cst-t3': r[0].type=='T3', 'cst-t15': r[0].type=='T15', 'cst-guide':r[0].type=='GUIDE', 'cst-swtich1': r[0].type=='SWITCH1'}"></td>
-									<td><span ng-if="r[0].name" ng-class="{'cst-stop': r[0].status=='stop', 'cst-ready': r[0].status=='ready', 'cst-normal': r[0].status=='normal'}" class="circle"></span></td>
-
-									<td ng-bind="3*$index+2"></td>
-									<td ng-bind="r[1].name" ng-class="{'cst-t3': r[1].type=='T3', 'cst-t15': r[1].type=='T15', 'cst-guide':r[1].type=='GUIDE', 'cst-swtich1': r[1].type=='SWITCH1'}"></td>
-									<td><span ng-if="r[1].name" ng-class="{'cst-stop': r[1].status=='stop', 'cst-ready': r[1].status=='ready', 'cst-normal': r[1].status=='normal'}" class="circle"></span></td>
-
-									<td ng-bind="3*$index+3"></td>
-									<td ng-bind="r[2].name" ng-class="{'cst-t3': r[2].type=='T3', 'cst-t15': r[2].type=='T15', 'cst-guide':r[2].type=='GUIDE', 'cst-swtich1': r[2].type=='SWITCH1'}"></td>
-									<td><span ng-if="r[2].name" ng-class="{'cst-stop': r[2].status=='stop', 'cst-ready': r[2].status=='ready', 'cst-normal': r[2].status=='normal'}" class="circle"></span></td>
-
-									<td ng-bind="3*$index+4"></td>
-									<td ng-bind="r[3].name" ng-class="{'cst-t3': r[3].type=='T3', 'cst-t15': r[3].type=='T15', 'cst-guide':r[3].type=='GUIDE', 'cst-swtich1': r[3].type=='SWITCH1'}"></td>
-									<td><span ng-if="r[3].name" ng-class="{'cst-stop': r[3].status=='stop', 'cst-ready': r[3].status=='ready', 'cst-normal': r[3].status=='normal'}" class="circle"></span></td>
-								</tr>
-							</tbody> -->
 						</table>
 						</div>
 				</div>
 			</div>
-			<div class="clear footer green-cross color-menu-type" style="position: absolute; bottom: 2.5em;">
+			<div class="clear"></div>
+		</div>
+    </ion-content>
+    <ion-footer-bar>
+    	<div>
+    		<div class="clear footer green-cross color-menu-type" style="">
 				
 				<div class="twrapper"><div class="type indicator clear">
 					<div class="value"><span class="circle cst-stop">&nbsp;</span></div>
@@ -145,10 +131,6 @@
 					<div class="name">挑拨至一线</div>
 				</div></div>
 			</div>
-			<div class="clear"></div>
-		</div>
-    </ion-content>
-    <ion-footer-bar>
 	    <div class="clear header six tc color-menu-type">
 			<div class="twrapper">
 				<div class="type two clear">
@@ -195,5 +177,6 @@
 			<a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
 			<a href="#/settings"><span class="glyphicon glyphicon-cog"></span></a>
 		</div>
+	</div>
 	</ion-footer-bar>
 </ion-view>
