Fix Dazhong Image

--- a/www/templates/entry.html
+++ b/www/templates/entry.html
@@ -4,7 +4,7 @@
 	  	<div></div>
 		<div class="title anji-theme">
 			<div class="title-wp">
-				<div class=" logo-left"><img class="fl" src="img/logo1.jpg"/></div>
+				<div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
 				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div class="bold-title single-line">
 		  			<span class="mainTitle">SFM现场管理信息系统</span>
