--- a/www/templates/green-cross.html
+++ b/www/templates/green-cross.html
@@ -3,7 +3,7 @@
 	  	<div></div>
 		<div class="title anji-theme">
 			<div class="title-wp">
-				<div class=" logo-left"><img class="fl" src="img/logo1.jpg"/></div>
+				<div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
 				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div>
 					<div class="bold-title single-line">
